<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings">

    <PreferenceCategory app:title="@string/monitor_service_pref">
        <SeslSwitchPreferenceScreen
            android:defaultValue="true"
            android:key="enableservice"
            android:singleLineTitle="false"
            android:summary="@string/monitor_service_summary"
            android:title="@string/monitor_service_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/drain_monitor_service_pref">

        <SeslSwitchPreferenceScreen
            android:defaultValue="false"
            android:key="drainmonitor"
            android:singleLineTitle="false"
            android:summary="@string/drain_monitor_service_summary"
            android:title="@string/drain_monitor_service_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cooldown_method_pref">
    <SeslSwitchPreferenceScreen
        android:dependency="enableservice"
        android:defaultValue="false"
        android:key="pauseMode"
        android:singleLineTitle="false"
        android:summary="@string/bypass_charging_summary"
        android:title="@string/bypass_charging_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/temperature_threshold">
        <com.sammy.sbatterytweaks.preference.FloatSeekBarPreference
            android:dependency="enableservice"
            android:key="thresholdUp"
            android:singleLineTitle="false"
            android:summary="@string/threshold_temperature_summary"
            android:title="@string/threshold_temperature_title"
            android:defaultValue="36.5"
            app:maxValue="45.0"
            app:minValue="30.0"
            app:stepSize="0.1"
            app:decimals="1"
            app:unit="°C" />

        <com.sammy.sbatterytweaks.preference.FloatSeekBarPreference
            android:dependency="enableservice"
            android:key="tempDelta"
            android:singleLineTitle="false"
            android:summary="@string/cooldown_temperature_summary"
            android:title="@string/cooldown_temperature_title"
            android:defaultValue="0.5"
            app:maxValue="5.0"
            app:minValue="0.1"
            app:stepSize="0.1"
            app:decimals="1"
            app:unit="°C" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/slow_charge_threshold_pref">
        <SeslSwitchPreferenceScreen
            android:defaultValue="false"
            android:key="slowChargeThresholdSwitch"
            android:singleLineTitle="false"
            android:summary="@string/slow_charge_threshold_summary"
            android:title="@string/slow_charge_threshold_title" />

        <com.sammy.sbatterytweaks.preference.FloatSeekBarPreference
            android:defaultValue="60"
            android:dependency="slowChargeThresholdSwitch"
            android:key="slowChargeThreshold"
            app:maxValue="100"
            app:minValue="30"
            app:stepSize="1"
            app:decimals="0"
            app:unit="%" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/fast_charge_threshold_pref">
        <SeslSwitchPreferenceScreen
            android:defaultValue="false"
            android:key="fastChargeThresholdSwitch"
            android:singleLineTitle="false"
            android:summary="@string/fast_charge_threshold_summary"
            android:title="@string/fast_charge_threshold_title" />

        <com.sammy.sbatterytweaks.preference.FloatSeekBarPreference
            android:defaultValue="40"
            android:dependency="fastChargeThresholdSwitch"
            android:key="fastChargeThreshold"
            app:maxValue="70"
            app:minValue="5"
            app:stepSize="1"
            app:decimals="0"
            app:unit="%" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/timer_cooldown_pref">
        <SeslSwitchPreferenceScreen
            android:dependency="enableservice"
            android:defaultValue="false"
            android:key="timerSwitch"
            android:singleLineTitle="false"
            android:title="@string/enable_cooldown_timer" />

        <com.sammy.sbatterytweaks.preference.FloatSeekBarPreference
            android:dependency="timerSwitch"
            android:key="cdSeconds"
            android:singleLineTitle="false"
            android:summary="@string/cooldown_time_summary"
            android:title="@string/cooldown_time_title"
            android:defaultValue="30"
            app:maxValue="600"
            app:minValue="30"
            app:stepSize="10"
            app:decimals="1"
            app:unit="s" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/scheduled_charge_control_pref">
        <SeslSwitchPreferenceScreen
            android:dependency="enableservice"
            android:defaultValue="false"
            android:key="schedSwitch"
            android:singleLineTitle="false"
            android:summary="@string/scheduled_charge_control_summary"
            android:title="@string/scheduled_charge_control_title" />

        <Preference
            android:dependency="schedSwitch"
            android:key="timePickerBtn"
            android:singleLineTitle="false"
            android:title="@string/scheduled_charge_control_time" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc_pref">
        <SeslSwitchPreferenceScreen
            android:dependency="enableservice"
            android:summary="@string/toast_notifications_summary"
            android:defaultValue="false"
            android:key="enabletoast"
            android:singleLineTitle="false"
            android:title="@string/toast_notifications_title" />

        <SeslSwitchPreferenceScreen
            android:dependency="enableservice"
            android:summary="@string/autosync_summary"
            android:defaultValue="false"
            android:key="disablesync"
            android:singleLineTitle="false"
            android:title="@string/autosync_title" />

        <SeslSwitchPreferenceScreen
            android:dependency="enableservice"
            android:summary="@string/reset_stats_summary"
            android:key="resetstats"
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:title="@string/reset_stats_title" />

        <SeslSwitchPreferenceScreen
            android:key="idleSwitch"
            android:singleLineTitle="false"
            android:summary="@string/pass_through_level_summary"
            android:title="@string/pass_through_level_title"
            android:defaultValue="false" />

        <com.sammy.sbatterytweaks.preference.FloatSeekBarPreference
            android:defaultValue="75"
            android:dependency="idleSwitch"
            android:key="idleLevel"
            app:maxValue="95"
            app:minValue="30"
            app:stepSize="1"
            app:decimals="0"
            app:unit="%" />
    </PreferenceCategory>
</PreferenceScreen>